--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,13 @@ typings/
 # dotenv environment variables file
 .env
 
+
+# next.js build output
+.next
+
+### Custom additions
+
+coverage
+dist
+es
+lib
