--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.5",
-    "moment": "^2.20.1"
+    "moment": "^2.20.1",
+    "yarn": "^1.5.1"
   },
   "peerDependencies": {
     "apollo-link": "^1.2.1",
@@ -83,7 +84,7 @@
     "redux-form": "v7.3.0",
     "redux-test-utils": "^0.2.1",
     "resolve-url-loader": "^2.1.0",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
@@ -93,8 +94,8 @@
     "build": "yarn run build:lib && yarn run build:es && yarn run build:umd && yarn run build:umd:min",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
     "build:lib": "cross-env BABEL_ENV=production babel src --out-dir lib",
-    "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/redux-form-bootstrap-widgets.js",
-    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/redux-form-bootstrap-widgets.min.js",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/cb-react-toolbox.js",
+    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/cb-react-toolbox.min.js",
     "clean": "rimraf dist es lib",
     "prepublish": " yarn run clean && yarn run build",
     "test": "cross-env NODE_ENV=test jest --config=jest.json --coverage",
