--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/addon-info": "^3.3.10",
     "@storybook/addon-knobs": "^3.3.10",
     "@storybook/react": "^3.3.10",
+    "apollo-link": "^1.2.1",
     "autoprefixer": "^7.1.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
@@ -63,6 +64,7 @@
     "extract-text-webpack-plugin": "^3.0.1",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
+    "graphql": "^0.13.2",
     "istanbul": "^0.4.5",
     "jest": "v22.4.2",
     "jest-environment-enzyme": "^5.0.3",
@@ -70,18 +72,20 @@
     "node-sass": "^4.5.3",
     "postcss-modules-values": "^1.3.0",
     "prop-types": "^15.5.10",
-    "react": "v16.2.0",
+    "react": "^16.3.1",
     "react-addons-shallow-compare": "^15.6.0",
-    "react-bootstrap": "^0.31.3",
-    "react-dom": "v16.2.0",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.3.1",
     "react-fa": "^5.0.0",
     "react-idle-timer": "^2.0.1",
     "react-moment-proptypes": "^1.4.0",
-    "react-redux": "5.0.7",
+    "react-notification-system-redux": "^1.2.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-test-renderer": "v16.2.0",
     "react-visibility-sensor": "^3.11.0",
-    "redux": "3.7.2",
-    "redux-form": "v7.3.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "redux-test-utils": "^0.2.1",
     "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.2",
