--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-react": "^7.3.0",
+    "extract-files": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
@@ -86,11 +87,13 @@
     "react-visibility-sensor": "^3.11.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "redux-saga": "^0.16.0",
     "redux-test-utils": "^0.2.1",
     "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "unfetch": "^3.0.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0"
   },
