--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cb-react-toolbox",
   "version": "0.0.1",
   "private": true,
-  "main": "./src/index.js",
+  "main": "./dist/cb-react-toolbox.min.js",
   "config": {
     "builddir": "./dist"
   },
