--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
     },
     "production": {
       "plugins": ["transform-react-remove-prop-types"]
-    }
-  }
+    },
+  },
+  "plugins": ["transform-runtime"] 
 }
