--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.5",
-    "moment": "^2.20.1",
-    "yarn": "^1.5.1"
+    "moment": "^2.20.1"
   },
   "peerDependencies": {
     "apollo-link": "^1.2.1",
