--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
-    "query-string": "^5.0.1"
+    "query-string": "^5.0.1",
+    "unfetch": "^3.0.0"
   },
   "peerDependencies": {
     "apollo-link": "^1.2.1",
@@ -19,13 +20,13 @@
     "react-bootstrap": "^0.31.3",
     "react-dom": "v16.2.0",
     "react-fa": "^5.0.0",
+    "react-idle-timer": "^2.0.1",
     "react-notification-system-redux": "^1.2.0",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.2.2",
     "react-visibility-sensor": "^3.11.0",
     "redux": "^3.7.2",
     "redux-form": "v7.3.0",
-    "react-idle-timer": "^2.0.1",
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
@@ -51,7 +52,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^3.3.7",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.28.4",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -74,6 +75,8 @@
     "jest": "v22.4.2",
     "jest-environment-enzyme": "^5.0.3",
     "jest-enzyme": "5.0.3",
+    "jest-fetch-mock": "^1.5.0",
+    "jest-localstorage-mock": "^2.2.0",
     "node-sass": "^4.5.3",
     "postcss-modules-values": "^1.3.0",
     "prop-types": "^15.5.10",
@@ -97,7 +100,6 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "unfetch": "^3.0.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0"
   },
@@ -109,7 +111,7 @@
     "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/cb-react-toolbox.min.js",
     "clean": "rimraf dist es lib",
     "prepublish": " yarn run clean && yarn run build",
-    "test": "cross-env NODE_ENV=test jest --config=jest.json --coverage",
+    "test": "cross-env NODE_ENV=test jest --config=jest.json --coverage src/.",
     "lint": "eslint -c ./.eslintrc.yml --ext .jsx,.js src",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
